tests/fail/cyclic_dependency.glu
let c = import "tests/fail/deps/cyclic_dependency2.glu"
in 1
